--- a/TestCases/ExtTestCases/Makefile
+++ b/TestCases/ExtTestCases/Makefile
@@ -4,6 +4,8 @@ a:
 	make TestString
 	make TestArray
 	make TestDictionary
+	make TestNumber
+	make TestUnicat
 
 TestString:
 	mcs -t:library ../../unicat/Ext/StringExt.cs -out:StringExt.dll
@@ -19,3 +21,13 @@ TestDictionary:
 	mcs -t:library ../../unicat/Ext/DictionaryExt.cs -out:DictionaryExt.dll
 	mcs -t:library -r:nunit.framework,DictionaryExt  TestDictionary.cs
 	nunit-console -nologo                            TestDictionary.dll
+
+TestNumber:
+	mcs -t:library ../../unicat/Ext/NumberExt.cs -out:NumberExt.dll
+	mcs -t:library -r:nunit.framework,NumberExt  TestNumber.cs
+	nunit-console -nologo                        TestNumber.dll
+
+TestUnicat:
+	mcs -t:library ../../unicat/Ext/StringExt.cs ../../unicat/Ext/ArrayExt.cs ../../unicat/Ext/DictionaryExt.cs ../../unicat/Ext/NumberExt.cs  -out:UnicatExt.dll
+	mcs -t:library -r:nunit.framework,UnicatExt  TestUnicat.cs
+	nunit-console -nologo                        TestUnicat.dll
