--- a/TestCases/ExtTestCases/Makefile
+++ b/TestCases/ExtTestCases/Makefile
@@ -8,6 +8,7 @@ a:
 	make TestHashSet
 	make TestDateTime
 	make TestUnicat
+	make TestObject
 
 TestString:
 	mcs -t:library ../../unicat/Ext/StringExt.cs -out:StringExt.dll
@@ -43,6 +44,10 @@ TestUnicat:
 	mcs -t:library ../../unicat/Ext/StringExt.cs ../../unicat/Ext/ArrayExt.cs ../../unicat/Ext/DictionaryExt.cs ../../unicat/Ext/NumberExt.cs ../../unicat/Ext/HashSetExt.cs  -out:UnicatExt.dll
 	mcs -t:library -r:nunit.framework,UnicatExt  TestUnicat.cs
 	nunit-console -nologo                        TestUnicat.dll
+
+TestObject:
+	mcs -t:library -r:nunit.framework  TestObject.cs
+	nunit-console -nologo              TestObject.dll
 
 c:
 	rm -f *.dll *.xml
